[package]
name = "m3u8-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["multipart"] }
async-trait = "0.1.64"