[package]
name = "m3u8-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
rfd = "0.11.0"
ehttp = "0.2.0"
poll-promise = "0.2.0"
# tokio = { version = "1", features = ["full"] }
# reqwest = { version = "0.11", features = ["blocking", "multipart"] }
# async-trait = "0.1.64"